--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,9 +12,10 @@
 
 					<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="H"></div>
-							<h2>A bene placito</h2>
-							<blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Ralph Waldo Emerson</cite></blockquote>
+							<div class="deco">
+                                <img src="/static/img/rklogo.png">
+                            </div>
+							<blockquote><p>We Deliver 100% Export Quality Food Products Around the World</p><cite>RajKamal</cite></blockquote>
 						</div>
 					</div>
 
@@ -85,7 +86,8 @@
 
 				<div id="page-title-inner">
 
-					<h2><span>Services</span></h2>
+					<h2><span>Welcome to
+Raj-Kamal Everbest Corporation Limited</span></h2>
 
 				</div>
 
