--- a/home/templates/home/masterpage.html
+++ b/home/templates/home/masterpage.html
@@ -27,12 +27,12 @@
 			          		<div class="nav-collapse collapse">
 			            		<ul class="nav">
 									<li><a href="#" class="home">Home</a></li>
-			              			<li><a href="#" class="services">Services</a></li>
-									<li><a href="#" class="pricing">Pricing</a></li>
-									<li><a href="#" class="portfolio">Portfolio</a></li>
-									<li><a href="#" class="about">About</a></li>
-									<li><a href="#" class="team">Team</a></li>
-									<li><a href="#" class="contact">Contact</a></li>
+			              			<li><a href="#" class="services">Who We Are</a></li>
+									<li><a href="#" class="pricing">What We Make</a></li>
+									<li><a href="#" class="portfolio">Why Choose Us</a></li>
+									<li><a href="#" class="about">Blog </a></li>
+									<li><a href="#" class="team">Export</a></li>
+									<li><a href="#" class="contact">Get In Touch</a></li>
 			            		</ul>
 			          		</div>
 			        	</div>
